change interceptor to guard
